--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
