--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.5",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
