--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.10.5",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.17",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
