--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.5",
+    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "nodemailer": "^6.4.17",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -31,8 +33,8 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start-dev": "react-scripts start",
-    "start": "nodemon --watch server server/index.js",
+    "start": "react-scripts start",
+    "dev": "nodemon --watch server server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
