--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.4.17",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "^16.13.1",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.6",
     "react-redux": "^7.2.1",
